--- a/css/styles.css
+++ b/css/styles.css
@@ -131,3 +131,13 @@ p {
 .pricing-col {
   padding: 3% 2%;
 }
+
+@media (max-width: 1000px){
+  .title-img{
+    position: static;
+    transform: rotate(0deg);
+  }
+  #title {
+    text-align: center;
+  }
+}
